--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ profile_results.prof
 line_profile_results.txt
 __pycache__/*
 lib/__pycache__/*
+kivySpringle/lib/__pycache__/*
 /*.png
 data/screenshots/*
